--- a/trino/overlays/example/kustomization.yaml
+++ b/trino/overlays/example/kustomization.yaml
@@ -14,6 +14,13 @@ images:
   newName: "gcr.io/myproject/trino"
   newTag: "474"
 
+secretGenerator:
+- name: trino-truststore
+  files:
+  - truststore.jks
+generatorOptions:
+  disableNameSuffixHash: true
+  
 patches:
 - patch: |-
     apiVersion: apps/v1
@@ -31,8 +38,14 @@ patches:
           - name: trino
             volumeMounts:
             - name: trino-cfg-vol
-              mountPath: /etc/trino/catalog/mysql.properties
-              subPath: mysql.properties
+              mountPath: /etc/trino/catalog/hive.properties
+              subPath: hive.properties
+            - name: trino-cfg-vol
+              mountPath: /etc/trino/catalog/postgres.properties
+              subPath: postgres.properties
+            - name: trino-truststore-vol
+              mountPath: /usr/lib/jvm/temurin/jdk-24+36/lib/security/cacerts
+              subPath: truststore.jks
             resources:
               requests:
                 memory: "8G"
@@ -56,8 +69,14 @@ patches:
           - name: trino
             volumeMounts:
             - name: trino-cfg-vol
-              mountPath: /etc/trino/catalog/mysql.properties
-              subPath: mysql.properties
+              mountPath: /etc/trino/catalog/hive.properties
+              subPath: hive.properties
+            - name: trino-cfg-vol
+              mountPath: /etc/trino/catalog/postgres.properties
+              subPath: postgres.properties
+            - name: trino-truststore-vol
+              mountPath: /usr/lib/jvm/temurin/jdk-24+36/lib/security/cacerts
+              subPath: truststore.jks
             resources:
               requests:
                 memory: "8G"
@@ -65,12 +84,17 @@ patches:
               limits:
                 memory: "16G"
                 cpu: "4"
-- patch: |-
-    apiVersion: v1
-    kind: Service
-    metadata:
-      name: trino-coordinator-service
-      namespace: $(namespace)
-    spec:
-      type: LoadBalancer
-      loadBalancerIP: "172.18.0.210"
+          volumes:
+          - name: trino-truststore-vol
+            secret:
+              secretName: trino-truststore
+# using ingress-gateway instead
+#- patch: |-
+#    apiVersion: v1
+#    kind: Service
+#    metadata:
+#      name: trino-coordinator-service
+#      namespace: $(namespace)
+#    spec:
+#      type: LoadBalancer
+#      loadBalancerIP: "172.18.0.210"
