--- a/hive-metastore/resources/istio/base/hive-gateway.yaml
+++ b/hive-metastore/resources/istio/base/hive-gateway.yaml
@@ -9,7 +9,7 @@ spec:
   servers:
     - port:
         number: 9083
-        name: tcp-thrift
+        name: thrift
         protocol: TCP
       hosts:
         - '*'
