--- a/trino/base/deployment.yaml
+++ b/trino/base/deployment.yaml
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: trino-coordinator
   namespace: $(namespace)
+  annotations:
+    prometheus.io/trino_scrape: "true"
 spec:
   selector:
     matchLabels:
@@ -14,9 +16,6 @@ spec:
     metadata:
       labels:
         app: trino-coordinator
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "8080"
     spec:
       securityContext:
         runAsUser: 1000
@@ -24,7 +23,7 @@ spec:
         fsGroup: 1000
       containers:
       - name: trino
-        image: trinodb/trino:474
+        image: trinodb/trino:475
         imagePullPolicy: IfNotPresent
         ports:
         - name: http
