--- a/trino/resources/prometheus/trino-worker-prom.template.yaml
+++ b/trino/resources/prometheus/trino-worker-prom.template.yaml
@@ -1,35 +1,45 @@
+
     - job_name: trino-metrics-worker
       scrape_interval: 10s
       scrape_timeout: 10s
       kubernetes_sd_configs:
         - role: pod
       relabel_configs:
-        - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_trino_scrape]
-          action: keep # scrape only pods with the trino scrape annotation
-          regex: true
-        - source_labels: [__meta_kubernetes_pod_container_name]
-          action: keep # don't try to scrape non trino container
-          regex: trino-worker
-        - source_labels: [__meta_kubernetes_pod_name]
-          action: replace
-          target_label: pod
-        - source_labels: [__meta_kubernetes_pod_container_name]
-          action: replace
-          target_label: container
+      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_trino_scrape]
+        action: keep # scrape only pods with the trino scrape anotation
+        regex: true
+      - source_labels: [__meta_kubernetes_pod_container_name]
+        action: keep # dont try to scrape non trino container
+        regex: trino-worker
+      - action: hashmod
+        modulus: $(SHARDS)
+        source_labels:
+        - __address__
+        target_label: __tmp_hash
+      - action: keep
+        regex: $(SHARD)
+        source_labels:
+        - __tmp_hash
+      - source_labels: [__meta_kubernetes_pod_name]
+        action: replace
+        target_label: pod
+      - source_labels: [__meta_kubernetes_pod_container_name]
+        action: replace
+        target_label: container
       metric_relabel_configs:
-        - source_labels: [__name__]
-          regex: ".+_FifteenMinute.+|.+_FiveMinute.+|.+IterativeOptimizer.+|.*io_airlift_http_client_type_HttpClient.+"
-          action: drop # dropping some highly granular metrics
-        - source_labels: [__meta_kubernetes_pod_name]
-          regex: ".+"
-          target_label: pod
-          action: replace
-        - source_labels: [__meta_kubernetes_pod_container_name]
-          regex: ".+"
-          target_label: container
-          action: replace
+          - source_labels: [__name__]
+            regex: ".+_FifteenMinute.+|.+_FiveMinute.+|.+IterativeOptimizer.+|.*io_airlift_http_client_type_HttpClient.+"
+            action: drop # droping some highly granular metrics
+          - source_labels: [__meta_kubernetes_pod_name]
+            regex: ".+"
+            target_label: pod
+            action: replace
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            regex: ".+"
+            target_label: container
+            action: replace
       scheme: http
       tls_config:
         insecure_skip_verify: true
       basic_auth:
-        username: ${TRINO_ADMIN}
+        username: ${TRINO_USER}
