--- a/trino/resources/prometheus/trino-coord-prom.template.yaml
+++ b/trino/resources/prometheus/trino-coord-prom.template.yaml
@@ -1,5 +1,5 @@
 # Prometheus scrape config for trino-coordinator
-    - job_name: trino
+    - job_name: trino-coordinator
       basic_auth:
         username: ${TRINO_USER}
         password: ${TRINO_PASSWORD}
@@ -10,3 +10,47 @@
       scheme: https
       tls_config:
         insecure_skip_verify: true
+
+# Alternate Service Discovery config
+    - job_name: trino-metrics-coordinator
+      scrape_interval: 10s
+      scrape_timeout: 10s
+      kubernetes_sd_configs:
+        - role: pod
+      relabel_configs:
+      - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_trino_scrape]
+        action: keep # scrape only pods with the trino scrape anotation
+        regex: true
+      - source_labels: [__meta_kubernetes_pod_container_name]
+        action: keep # dont try to scrape non trino container
+        regex: trino-coordinator
+      - source_labels: [__meta_kubernetes_pod_name]
+        action: replace
+        target_label: pod
+      - source_labels: [__meta_kubernetes_pod_container_name]
+        action: replace
+        target_label: container
+      - source_labels: [__meta_kubernetes_namespace]
+        action: replace
+        target_label: namespace
+      - action: replace  # overide the address to the https ingress address 
+        target_label: __address__
+        replacement: https://${TRINO_DOMAINNAME}
+      metric_relabel_configs:
+          - source_labels: [__name__]
+            regex: ".+_FifteenMinute.+|.+_FiveMinute.+|.+IterativeOptimizer.+|.*io_airlift_http_client_type_HttpClient.+"
+            action: drop # droping some highly granular metrics 
+          - source_labels: [__meta_kubernetes_pod_name]
+            regex: ".+"
+            target_label: pod
+            action: replace 
+          - source_labels: [__meta_kubernetes_pod_container_name]
+            regex: ".+"
+            target_label: container
+            action: replace 
+      scheme: https
+      tls_config:
+        insecure_skip_verify: true
+      basic_auth:
+        username: ${TRINO_USER}
+        password: ${TRINO_PASSWORD}
