--- a/trino/resources/prometheus/trino-worker-prom-simple.yaml
+++ b/trino/resources/prometheus/trino-worker-prom-simple.yaml
@@ -17,6 +17,8 @@
       - source_labels: [__meta_kubernetes_pod_container_port_name]
         action: keep
         regex: http
+      - source_labels: [__meta_kubernetes_namespace]
+        target_label: namespace
       scheme: http
       tls_config:
         insecure_skip_verify: true
