--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         fsGroup: 999
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-mimas-2504.15
+        image: quay.io/tcarland/hive:v3.1.3-fenrir-2506.10
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_REGION
@@ -56,6 +56,16 @@ spec:
           limits:
             memory: "8G"
             cpu: "2"
+        livenessProbe:
+          tcpSocket:
+            port: 9083
+          initialDelaySeconds: 10
+          periodSeconds: 10
+        readinessProbe:
+          tcpSocket:
+            port: 9083
+          initialDelaySeconds: 5
+          periodSeconds: 10
       volumes:
         - name: metastore-cfg-vol
           configMap:
