--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         fsGroup: 999
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-fenrir-2506.10
+        image: quay.io/tcarland/hive:v3.1.3-ymir-2508.14
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_REGION
