--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/myproject/hive
-  newTag: v3.1.3-mimas-2504.15
+  newTag: v3.1.3-ymir-2508.15
 
 secretGenerator:
 - name: hive-truststore
