--- a/hive-metastore/resources/Containerfile
+++ b/hive-metastore/resources/Containerfile
@@ -2,17 +2,21 @@ ARG java_version=17
 
 FROM eclipse-temurin:${java_version}-jre
 
-ARG hadoop_version=3.3.4
+ARG hadoop_version=3.4.1
 ARG hive_version=3.1.3
 ARG mysql_cj_version=8.4.0
 ARG pg_jdbc_version=42.7.4
-ARG aws_sdk_version=1.12.782
+#ARG aws_sdk_version=1.12.787
+ARG aws_sdk_version=2.32.20
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://archive.apache.org/dist/hive
 ARG mysql_uri=https://dev.mysql.com/get/Downloads/Connector-J
 ARG pgsql_uri=https://jdbc.postgresql.org/download
-ARG aws_sdk_uri=https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle
+# sdk v1
+# ARG aws_sdk_uri=https://repo1.maven.org/maven2/com/amazonaws/aws-java-sdk-bundle
+# sdk v2
+ARG aws_sdk_uri=https://repo1.maven.org/maven2/software/amazon/awssdk/bundle
 
 ENV HADOOP_HOME="/opt/hadoop"
 ENV HIVE_HOME="/opt/hive"
@@ -30,8 +34,8 @@ RUN curl -L ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.
 	rm -r /opt/hadoop/share/doc && \
     ln -s /opt/hadoop/share/hadoop/tools/lib/hadoop-aws* /opt/hadoop/share/hadoop/common/lib/
 
-RUN curl -L ${aws_sdk_uri}/${aws_sdk_version}/aws-java-sdk-bundle-${aws_sdk_version}.jar \
-    -o /opt/hadoop/share/hadoop/common/lib/aws-java-sdk-bundle-${aws_sdk_version}.jar
+RUN curl -L ${aws_sdk_uri}/${aws_sdk_version}/bundle-${aws_sdk_version}.jar \
+    -o /opt/hadoop/share/hadoop/common/lib/bundle-${aws_sdk_version}.jar
 
 RUN curl -L ${hive_uri}/hive-${hive_version}/apache-hive-${hive_version}-bin.tar.gz | \
 	tar xvz -C /opt/ && \
@@ -44,10 +48,12 @@ RUN curl -L ${mysql_uri}/mysql-connector-j-${mysql_cj_version}.tar.gz | \
 
 RUN curl -L ${pgsql_uri}/postgresql-${pg_jdbc_version}.jar -o /opt/hive/lib/postgresql-${pg_jdbc_version}.jar
 
-RUN if [ -f ca.crt ]; then \
-        cp ca.crt /usr/local/share/ca-certificates/tdh-ca.crt && \
+COPY ca.crt /opt/hive/ca.crt
+RUN if [ -f /opt/hive/ca.crt ]; then \
+        cp /opt/hive/ca.crt /usr/local/share/ca-certificates/tdh-ca.crt && \
         update-ca-certificates && \
-        keytool -import -trustcacerts -cacerts -storepass changeit -noprompt -alias tdh-ca -file ca.crt; \
+        keytool -import -trustcacerts -cacerts -storepass changeit -noprompt -alias tdh-ca \
+                -file /usr/local/share/ca-certificates/tdh-ca.crt; \
     fi 
 
 WORKDIR /opt/hive
