--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -89,17 +89,5 @@ data:
     ssl: false
     lowercaseOutputName: false
     lowercaseOutputLabelNames: false
-    includeObjectNames: ["java.lang:type=Threading"]
-    autoExcludeObjectNameAttributes: true
-    excludeObjectNameAttributes:
-      "java.lang:type=OperatingSystem":
-        - "ObjectName"
-      "java.lang:type=Runtime":
-        - "ClassPath"
-        - "SystemProperties"
     rules:
-      - pattern: 'java\.lang<type=Threading><(.*)>ThreadCount: (.*)'
-        name: java_lang_Threading_ThreadCount
-        value: '$2'
-        help: 'ThreadCount (java.lang<type=Threading><>ThreadCount)'
-        type: UNTYPED
+      - pattern: '.*'
