--- a/trino/base/deployment.yaml
+++ b/trino/base/deployment.yaml
@@ -115,7 +115,7 @@ spec:
           failureThreshold: 6
           successThreshold: 1
       - name: jmx-exporter
-        image: bitnami/jmx-exporter:1.0.1
+        image: quay.io/tcarland/jmx-exporter:v1.4.0
         imagePullPolicy: IfNotPresent
         securityContext: {}
         env: []
@@ -124,6 +124,7 @@ spec:
         - name: jmx-exporter
           containerPort: 5556
           protocol: TCP
+        command: [ "java", "-jar", "jmx_prometheus_standalone-1.4.0.jar" ]
         args:
         - "5556"
         - /etc/jmx-exporter/jmx-exporter-config.yaml
