--- a/conf/trino-configmap.yaml.template
+++ b/conf/trino-configmap.yaml.template
@@ -84,10 +84,22 @@ data:
     s3.path-style-access=true
     s3.max-connections=150
   jmx-exporter-config.yaml: |-
-    hostPort: localhost:9080
+    hostPort: "localhost:9080"
     startDelaySeconds: 0
     ssl: false
     lowercaseOutputName: false
     lowercaseOutputLabelNames: false
+    includeObjectNames: ["java.lang:type=Threading"]
+    autoExcludeObjectNameAttributes: true
+    excludeObjectNameAttributes:
+      "java.lang:type=OperatingSystem":
+        - "ObjectName"
+      "java.lang:type=Runtime":
+        - "ClassPath"
+        - "SystemProperties"
     rules:
-      - pattern: '.*'
+      - pattern: 'java\.lang<type=Threading><(.*)>ThreadCount: (.*)'
+        name: java_lang_Threading_ThreadCount
+        value: '$2'
+        help: 'ThreadCount (java.lang<type=Threading><>ThreadCount)'
+        type: UNTYPED
