--- a/trino/base/statefulset.yaml
+++ b/trino/base/statefulset.yaml
@@ -82,7 +82,7 @@ spec:
             drop:
             - ALL
       - name: jmx-exporter
-        image: quay.io/tcarland/jmx-exporter:v1.4.0
+        image: quay.io/tcarland/jmx-exporter:1.4.0_25.10.04
         imagePullPolicy: IfNotPresent
         securityContext: {}
         env: []
@@ -91,7 +91,6 @@ spec:
         - name: jmx-exporter
           containerPort: 5556
           protocol: TCP
-        command: [ "java", "-jar", "jmx_prometheus_standalone-1.4.0.jar" ]
         args:
         - "5556"
         - /etc/jmx-exporter/jmx-exporter-config.yaml
