--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -7,8 +7,8 @@ resources:
 
 images:
 - name: quay.io/tcarland/hive
-  newName: gcr.io/myproject/hive
-  newTag: v3.1.3-ymir-2508.15
+  newName: gcr.io/project/hive
+  newTag: v3.1.3-skoll-2510.30
 
 secretGenerator:
 - name: hive-truststore
