--- a/hive-metastore/base/deployment.yaml
+++ b/hive-metastore/base/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         fsGroup: 999
       containers:
       - name: hive-metastore
-        image: quay.io/tcarland/hive:v3.1.3-skoll-2510.30
+        image: quay.io/tcarland/hive:v3.1.3-aegir-2512.20
         imagePullPolicy: IfNotPresent
         env:
         - name: AWS_REGION
