--- a/hive-metastore/resources/Containerfile
+++ b/hive-metastore/resources/Containerfile
@@ -4,12 +4,12 @@ FROM azul/zulu-openjdk:${java_image_tag}
 LABEL org.opencontainers.image.authors="Timothy C. Arland <tcarland at gmail dot com>"
 LABEL org.opencontainers.image.licenses="Apache-2.0"
 LABEL org.opencontainers.image.ref.name="Apache Hive Metastore/Java Image"
-LABEL org.opencontainers.image.version="aegir"
+LABEL org.opencontainers.image.version="mimas"
 
-ARG hadoop_version=3.4.1
+ARG hadoop_version=3.4.2
 ARG hive_version=3.1.3
 ARG pg_jdbc_version=42.7.5
-ARG aws_sdk_version=2.40.12
+ARG aws_sdk_version=2.41.12
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://archive.apache.org/dist/hive
