--- a/hive-metastore/overlays/example/kustomization.yaml
+++ b/hive-metastore/overlays/example/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
 images:
 - name: quay.io/tcarland/hive
   newName: gcr.io/project/hive
-  newTag: v3.1.3-mimas-2601.20
+  newTag: v3.1.3-fenrir-2602.19
 
 secretGenerator:
 - name: hive-truststore
