--- a/hive-metastore/resources/Containerfile
+++ b/hive-metastore/resources/Containerfile
@@ -1,15 +1,18 @@
 ARG java_image_tag=21
 FROM azul/zulu-openjdk:${java_image_tag}
 
-LABEL org.opencontainers.image.authors="Timothy C. Arland <tcarland at gmail dot com>"
-LABEL org.opencontainers.image.licenses="Apache-2.0"
-LABEL org.opencontainers.image.ref.name="Apache Hive Metastore/Java Image"
-LABEL org.opencontainers.image.version="mimas"
+LABEL org.opencontainers.image.authors="Timothy C. Arland <tcarland at gmail dot com>" \
+      org.opencontainers.image.base.name="azul/zulu-openjdk:21" \
+      org.opencontainers.image.licenses="Apache-2.0" \
+      org.opencontainers.image.description="Apache Hive Metastore Image" \
+      org.opencontainers.image.source="https://github.com/tcarland/trino-on-k8s" \
+      org.opencontainers.image.title="Hive Metastore" \
+      org.opencontainers.image.version="fenrir"
 
-ARG hadoop_version=3.4.2
+ARG hadoop_version=3.4.1
 ARG hive_version=3.1.3
 ARG pg_jdbc_version=42.7.5
-ARG aws_sdk_version=2.41.12
+ARG aws_sdk_version=2.41.31
 
 ARG hadoop_uri=https://archive.apache.org/dist/hadoop/core
 ARG hive_uri=https://archive.apache.org/dist/hive
@@ -23,7 +26,7 @@ ENV PATH="/opt/hadoop/bin:${PATH}"
 RUN groupadd --gid 999 hive && \
     useradd -m --gid 999 --uid 999 hive && \
     apt-get update && \
-    apt-get install -y curl --no-install-recommends && \
+    apt-get install --no-install-recommends -y curl && \
     rm -rf /var/lib/apt/lists/*
 
 RUN curl -L ${hadoop_uri}/hadoop-${hadoop_version}/hadoop-${hadoop_version}.tar.gz  | \
